# graph-augmented-ai-workshop

./: .gitignore  AUGMENTATION.md  CLEAN.md  LAB_TESTING.md  README.md  REMOTE.md  alignplan.md  build_dbc.py  genie.md  labs.dbc  lessons.markdown  mcp_ftw.md  pyproject.toml
docs/: BACKGROUND_CONCEPTS.md  alignplan.md
full_demo/: .env.example  README.md  build_dbc.py  publish_dbc.py  pyproject.toml
full_demo/agent_modules/: check_neo4j.py  generate_embeddings.py  run_augmentation_agent.py  run_lab2.py  run_lab3.py  run_lab4.py  run_lab7.py  verify_lab2.py
full_demo/augmentation_agent/: __main__.py  filter.py  lm.py  next_steps.md  reporting.py  resolver.py  schemas.py  supervisor_client.py  writeback.py
full_demo/cli/: __init__.py
lab_4_neo4j_to_lakehouse/: README.md  export_neo4j_to_databricks.ipynb
lab_5_ai_agents/: README.md
lab_6_multi_agent/: README.md  SAMPLE_QUERIES.md
lab_7_augmentation_agent/: DSPY_README.md  README.md  agent_dspy.py  augmentation_dspy_agent.ipynb
lab_setup/: .env.example  README.md  clean.sh  submit.sh  upload.sh
labs/: 0 - Required Setup.ipynb  0 - Required Setup.py  1 - Neo4j Import.ipynb  1 - Neo4j Import.py  4 - Neo4j to Lakehouse.ipynb  4 - Neo4j to Lakehouse.py  5 - AI Agents.ipynb  (+5 more)
solutions/: .env.example  README.md  pyproject.toml
solutions/agent_modules/: check_neo4j.py  run_lab2.py  run_lab4.py  run_lab7.py  test_hello.py  verify_lab2.py
solutions/augmentation_agent/: README.md  __init__.py  __main__.py  analyzers.py  lm.py  mas_client.py  next_steps.md  signatures.py
solutions/cli/: __init__.py  __main__.py
workshop_admin/: .env.example  README.md  pyproject.toml
workshop_admin/cli/: __init__.py
(+19 files in other folders)
