[project]
name = "workshop-admin"
version = "0.1.0"
description = "Pre-compute vector embeddings for workshop HTML documents"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "databricks-job-runner",
]

[tool.uv.sources]
databricks-job-runner = { path = "/Users/ryanknight/projects/databricks/databricks-job-runner", editable = true }
